--- a/Views/Actors/Index.cshtml
+++ b/Views/Actors/Index.cshtml
@@ -1,1 +1,39 @@
-﻿<h1>hhhhhhhhhh</h1>
+﻿@model IEnumerable<Actor>
+@{
+    ViewData["Title"] = "List of actors";
+}
+
+<div class="rows">
+    <table class = "table">
+        <thead>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.ProfilePicURL)</th>
+                <th>@Html.DisplayNameFor(model => model.Name)</th>
+                <th>@Html.DisplayNameFor(model => model.Bio)</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach(var item in Model)
+            {
+                <tr>
+                    <td class="align-middle">
+                        <img class="rounded-circle w-25" src="@item.ProfilePicURL" alt="@item.Name"/>
+                    </td>
+                    <td class="align-middle">
+                        @item.Name
+                    </td>
+                    <td class="align-middle">
+                        @item.Bio
+                    </td>
+                    <td class="align-middle">
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary"><i class="bi bi-pen"></i> Edit</a>   |
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"><i class="bi bi-eye"></i> Details</a>   |   
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger"><i class="bi bi-trash"></i> Delete</a> 
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    <a asp-action="Create" class="btn btn-dark"><i class="bi bi-plus"></i>Add Actor</a>
+</div>
